--- a/Conclusion.tex
+++ b/Conclusion.tex
@@ -1,5 +1,7 @@
 \chapter*{Conclusion}
 
+- Un des enjeux de la thèse était de définir des représentations adaptées aux comportements d'apprentissage d'une architecture. Nous y avons répondu en présentant une méthode d'analyse des réponses des cartes aux phases de tests et envisagé des indicateurs.
+
 \section*{Discussion}
 
 La thèse que nous avons présentée cherche à créer un modèle d'architecture modulaire non-hiérarchique d'apprentissage non-supervisé, en utilisant des cartes de Kohonen en tant que modules.
